# glossa-morpho

./: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: app.config.ts
app/composables/: useDesktopApi.ts  useSystemDialogs.ts
app/layouts/: default.vue
app/pages/: index.vue
app/plugins/: disable-native-context-menu.client.ts  (+1 more)
i18n/: i18n.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: editing.rs  errors.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/application/dto/: README.md
src-tauri/src/application/mappers/: README.md
src-tauri/src/application/services/: README.md
src-tauri/src/commands/: entry.rs  export.rs  import.rs  project.rs  treemap.rs
src-tauri/src/db_migrations/: 001_init.sql
src-tauri/src/domain/candidate/: README.md
src-tauri/src/domain/entry/: README.md
src-tauri/src/domain/history/: README.md
src-tauri/src/domain/project/: README.md
src-tauri/src/domain/validation/: README.md
src-tauri/src/exporters/: json.rs  mod.rs  properties.rs  resx.rs  xaml.rs  xliff.rs  yaml.rs
src-tauri/src/infrastructure/db/: README.md
src-tauri/src/infrastructure/fs/: README.md
src-tauri/src/infrastructure/logging/: README.md
src-tauri/src/infrastructure/repository/: README.md
src-tauri/src/parsers/: json.rs  mod.rs  properties.rs  resx.rs  xaml.rs  xliff.rs  yaml.rs
src-tauri/src/project_format/: manifest.rs  migration.rs  snapshots.rs  storage.rs
src-tauri/src/utils/: xml_utils.rs
(+41 files in other folders)
